--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "ChatWars Telegram bot",
   "main": "src/index.js",
   "scripts": {
+    "lint": "eslint src",
     "babel-node": "babel-node",
-    "start": "nodemon --exec npm run babel-node -- src/index.js"
+    "start": "nodemon --exec 'npm run lint && babel-node' -- src/index.js"
   },
   "author": "Alexander Levin",
   "license": "ISC",
