--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "Alexander Levin",
   "license": "ISC",
   "dependencies": {
-    "cw-rest-api": "^1.2.0",
+    "cw-rest-api": "^1.3.0",
     "debug": "^3.1.0",
     "lodash": "^4.17.10",
-    "telegraf": "^3.22.2"
+    "telegraf": "^3.22.2",
+    "telegraf-session-redis": "^5.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -24,5 +25,8 @@
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.13.0",
     "nodemon": "^1.18.3"
+  },
+  "engines": {
+    "node": "8.11.3"
   }
 }
