--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cw-rest-api": "^1.4.0",
     "debug": "^3.1.0",
     "lodash": "^4.17.10",
+    "redis": "^2.8.0",
     "telegraf": "^3.22.2",
     "telegraf-session-redis": "^5.0.0"
   },
