--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint src",
     "babel-node": "babel-node",
-    "start": "nodemon --exec 'npm run lint && babel-node' -- src/index.js"
+    "start": "nodemon --exec 'npm run lint && babel-node' -- src/index.js",
+    "build": "babel src -d dist"
   },
   "author": "Alexander Levin",
   "license": "ISC",
@@ -28,6 +29,6 @@
     "nodemon": "^1.18.3"
   },
   "engines": {
-    "node": "8.11.3"
+    "node": "8.10.0"
   }
 }
