--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src",
     "babel-node": "babel-node",
     "start": "nodemon --exec 'npm run lint && babel-node' -- src/index.js",
-    "build": "babel src -d dist"
+    "build": "npm run lint && babel src -d dist"
   },
   "author": "Alexander Levin",
   "license": "ISC",
