consumers npm task

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "lint": "eslint src",
     "babel-node": "babel-node",
     "start": "nodemon --exec 'npm run lint && babel-node' -- src/index.js",
-    "build": "npm run lint && babel src -d dist"
+    "pkg": "cp package.json dist",
+    "build": "npm run lint && babel src -d dist && npm run pkg",
+    "consumers": "nodemon --exec 'npm run lint && babel-node' -- src/consumers"
   },
   "author": "Alexander Levin",
   "license": "ISC",
   "dependencies": {
-    "cw-rest-api": "^1.5.2",
+    "cw-rest-api": "^1.5.4",
     "debug": "^3.1.0",
     "lodash": "^4.17.10",
     "redis": "^2.8.0",
