--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "cw-rest-api": "^1.5.4",
+    "date-fns": "^1.29.0",
     "debug": "^3.1.0",
     "koa": "^2.5.2",
     "koa-body": "^4.0.4",
