--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "cw-rest-api": "^1.7.10",
     "date-fns": "^1.29.0",
     "debug": "^3.1.0",
-    "koa": "^2.5.2",
-    "koa-body": "^4.0.4",
-    "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
     "mongoose": "^5.4.16",
     "redis": "^2.8.0",
@@ -33,9 +30,11 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.13.0",
+    "mocha": "^6.2.0",
     "nodemon": "^1.18.3"
   },
   "engines": {
