--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint src --fix",
+    "test": "mocha --require esm",
     "babel-node": "babel-node",
     "start": "nodemon --exec 'npm run lint && babel-node' -- src/index.js",
     "pkg": "cp package.json dist",
@@ -18,6 +19,7 @@
     "cw-rest-api": "^1.7.10",
     "date-fns": "^1.29.0",
     "debug": "^3.1.0",
+    "esm": "^3.2.25",
     "lodash": "^4.17.10",
     "mongoose": "^5.4.16",
     "redis": "^2.8.0",
@@ -33,7 +35,8 @@
     "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-mocha": "^6.0.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.18.3"
   },
