--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.2.0",
   "description": "ChatWars Telegram bot",
   "main": "src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/alevinru/CWClientHelperAppBot.git"
+  },
   "scripts": {
     "lint": "eslint src --fix",
     "watchLint": "nodemon --exec 'npm run lint'",
@@ -26,7 +30,7 @@
     "redis": "^2.8.0",
     "sistemium-telegram": "^1.2.10",
     "socks5-https-client": "^1.2.1",
-    "telegraf": "^3.22.2",
+    "telegraf": "^3.33.3",
     "telegraf-session-redis": "^5.0.0"
   },
   "devDependencies": {
